# msConverter

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  birth-death-hyb-gen.R  newick-string-pairs.txt  newick-strings.txt
.github/workflows/: cmake.yml  joss.yml  macos-tests.yml  msvc.yml  ubuntu-tests.yml  windows-tests.yml
JOSS/: paper.bib  paper.md
binaries/: ms-converter_macOS_Monterey_12.4_M1
src/: CMakeLists.txt  Code-Progress.md  Makefile  SimSuite.cpp  SimSuite.hpp  exec.cpp  main.cpp  newick-strings.txt
src/core/: CMakeLists.txt  MSEvents.hpp  Network.cpp  Network.hpp  Node.cpp  Node.hpp  core-main.cpp  core_helpers.hpp
src/tests/: CMakeLists.txt  CoreTests.cpp  test_helpers.hpp  test_isomorphicNewick.cpp  test_isomorphismAfterMSConversion.cpp  test_makeUltrametric.cpp  test_memoryLeak.cpp  test_safety.cpp  tests.md
